<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.appleobject.notekeeper.NoteActivity">
    <item
        android:id="@+id/action_send_email"
        android:orderInCategory="3"
        android:title="@string/send_as_email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="2"
        android:title="@string/next"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_cancel"
        android:title="@string/cancel"
        app:showAsAction="ifRoom|withText"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_revert"
        />
</menu>
