<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_notes"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/menu_note" />
        <item
            android:id="@+id/nav_courses"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_courses" />
    </group>
    <item android:id="@+id/nav_communicate"
        android:title="@string/communicate">
        <menu>
            <item android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@android:drawable/ic_menu_share"/>
            <item android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/send"/>
        </menu>

    </item>
</menu>